X0.m.22 Implemented PWM controlled turning and changed the motor drive frequency to 50Hz, which seems less jerky.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ Thumbs.db
 # Folder config file
 Desktop.ini
 rc_car_esp32/my_wifi_ssid_pass.h
+rc_car_esp32/.vscode/c_cpp_properties.json
+rc_car_esp32/.vscode/arduino.json
+rc_car_esp32/.vscode/launch.json
